--- a/HTML/index.html
+++ b/HTML/index.html
@@ -73,8 +73,89 @@
     <!-- Beginning of Services Section -->
         <section id="services">
             <div class="services container">
-
+                <div class="services-header">
+                    <h1 class="section-title">Ser<span class="pinkh1">v</span>ices</h1>
+                </div>
+                <div class="service-item-header">
+                    <h1>Web Design</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta, molestias eligendi placeat minima, quidem, voluptatem quam dicta atque ad doloremque harum quo sequi deleniti dolore ex itaque officiis ut a.</p>
+                </div>
+                <div class="service-item-bg">
+                    <div class="service-item-container">
+                        <div class="service-item">
+                            <div class="program-icon">
+                                <img src="../Images/icon-html.png" alt="HTML 5">
+                            </div>
+                            <div class="program-name">HTML 5</div>
+                        </div>
+                        <div class="service-item">
+                            <div class="program-name">CSS 3</div>
+                            <div class="program-icon">
+                                <img src="../Images/icon-css.png" alt="CSS 3">
+                            </div>
+                        </div>
+                        <div class="service-item">
+                            <div class="program-icon">
+                                <img src="../Images/icon-js.png" alt="JavaScript">
+                            </div>
+                            <div class="program-name">JavaScript</div>
+                        </div>
+                        <div class="service-item">
+                            <div class="program-name">Sass</div>
+                            <div class="program-icon">
+                                <img src="../Images/icon-sass.png" alt="Sass">
+                            </div>
+                        </div>
+                        <div class="service-item">
+                            <div class="program-icon">
+                                <img src="../Images/icon-xd.png" alt="Adobe XD">
+                            </div>
+                            <div class="program-name">Adobe XD</div>
+                        </div>
+                    </div>
+                </div>
             </div>
+            <section class="services container">
+                <div class="service-item-header">
+                    <h1>Digital Art <span class="pink">&</span> Design</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente debitis odit illum! Ratione libero illum inventore atque esse animi expedita quod, ipsa id, fuga ex natus. Dolor nostrum aliquam officiis!</p>
+                </div>
+                <div class="service-item-bg">
+                    <div class="service-item-container">
+                        <div class="service-item">
+                            <div class="program-icon">
+                                <img src="../Images/icon-photoshop.png" alt="Photoshop">
+                            </div>
+                            <div class="program-name">Photoshop</div>
+                        </div>
+                        <div class="service-item">
+                            <div class="program-name">Illustrator</div>
+                            <div class="program-icon">
+                                <img src="../Images/icon-illustrator.png" alt="Illustrator">
+                            </div>
+                        </div>
+                        <div class="service-item">
+                            <div class="program-icon">
+                                <img src="../Images/icon-animate.png" alt="Animate">
+                            </div>
+                            <div class="program-name">Animate</div>
+                        </div>
+                        <div class="service-item">
+                            <div class="program-name">Maya</div>
+                            <div class="program-icon">
+                                <img src="../Images/icon-maya.png" alt="Maya">
+                            </div>
+                        </div>
+                        <div class="service-item">
+                            <div class="program-icon">
+                                <img src="../Images/icon-3dsmax.png" alt="3ds Max">
+                            </div>
+                            <div class="program-name">3ds Max</div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
         </section>
 
     <!-- End of Services Section -->
