--- a/HTML/index.html
+++ b/HTML/index.html
@@ -31,7 +31,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="#projects" class="nav-link">
                         <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="briefcase" class="svg-inline--fa fa-briefcase" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M320 336c0 8.844-7.156 16-16 16h-96C199.2 352 192 344.8 192 336V288H0v144C0 457.6 22.41 480 48 480h416c25.59 0 48-22.41 48-48V288h-192V336zM464 96H384V48C384 22.41 361.6 0 336 0h-160C150.4 0 128 22.41 128 48V96H48C22.41 96 0 118.4 0 144V256h512V144C512 118.4 489.6 96 464 96zM336 96h-160V48h160V96z" class="fa-primary"></path></svg>
                         <span class="link-text">Projects</span>
                     </a>
@@ -96,9 +96,9 @@
                         </div>
                         <div class="service-item">
                             <div class="program-icon">
-                                <img src="../Images/icon-js.png" alt="JavaScript">
+                                <img src="../Images/icon-figma.png" alt="Figma">
                             </div>
-                            <div class="program-name">JavaScript</div>
+                            <div class="program-name">Figma</div>
                         </div>
                         <div class="service-item">
                             <div class="program-name">Sass</div>
@@ -114,10 +114,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <section class="services container">
                 <div class="service-item-header">
-                    <h1>Digital Art <span class="pink">&</span> Design</h1>
+                    <h1>Digital Art <span class="pink">&</span> Illustration</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente debitis odit illum! Ratione libero illum inventore atque esse animi expedita quod, ipsa id, fuga ex natus. Dolor nostrum aliquam officiis!</p>
                 </div>
                 <div class="service-item-bg">
@@ -154,11 +152,61 @@
                         </div>
                     </div>
                 </div>
-            </section>
-
+                <div class="service-item-header">
+                    <h1>Programming</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, tempora in itaque sunt obcaecati, necessitatibus laborum nemo corporis aspernatur fugit harum at! Accusamus fugiat totam recusandae deleniti voluptas illo eaque.</p>
+                </div>
+                <div class="service-item-bg">
+                    <div class="service-item-container">
+                        <div class="service-item">
+                            <div class="program-icon">
+                                <img src="../Images/icon-js.png" alt="JavaScript">
+                            </div>
+                            <div class="program-name">JavaScript</div>
+                        </div>
+                        <div class="service-item">
+                            <div class="program-name">Python</div>
+                            <div class="program-icon">
+                                <img src="../Images/icon-python.png" alt="Python">
+                            </div>
+                        </div>
+                        <div class="service-item">
+                            <div class="program-icon">
+                                <img src="../Images/icon-react.png" alt="React">
+                            </div>
+                            <div class="program-name">React</div>
+                        </div>
+                        <div class="service-item">
+                            <div class="program-name">Vue</div>
+                            <div class="program-icon">
+                                <img src="../Images/icon-vue.png" alt="Vue">
+                            </div>
+                        </div>
+                        <div class="service-item">
+                            <div class="program-icon">
+                                <img src="../Images/icon-angular.png" alt="Angular">
+                            </div>
+                            <div class="program-name">Angular</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
-
     <!-- End of Services Section -->
+        <section id="projects">
+            <div class="projects container">
+                <div class="projects-header">
+                    <h1 class="section-title">Pro<span class="pink">j</span>ects</h1>
+                </div>
+                <div class="project-item" id="easy-bank">
+                    <h1 class="project-title">Easy Bank - 2021</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+            </div>
+        </section>
+    <!-- Beginning of Projects Section -->
+
+    <!-- End of Projects Section -->
         
     <!-- END OF MAIN -->
     </main>
