--- a/HTML/index.html
+++ b/HTML/index.html
@@ -115,7 +115,8 @@
                     </div>
                 </div>
                 <div class="service-item-header">
-                    <h1>Digital Art <span class="pink">&</span> Illustration</h1>
+                    <h1 id="digitalArt">Digital Art</h1>
+                    <h1 id="illustration"><span class="pink">&</span> Illustration</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente debitis odit illum! Ratione libero illum inventore atque esse animi expedita quod, ipsa id, fuga ex natus. Dolor nostrum aliquam officiis!</p>
                 </div>
                 <div class="service-item-bg">
@@ -195,12 +196,21 @@
     <!-- End of Services Section -->
         <section id="projects">
             <div class="projects container">
-                <div class="projects-header">
-                    <h1 class="section-title">Pro<span class="pink">j</span>ects</h1>
+                <h1 class="section-title">Pro<span class="pink">j</span>ects</h1>
+                <div class="project-item">
+                    <h1 class="project-item-header" >Banking</h1>
+                    <div class="project-item-container" id="banking">
+                    </div>
                 </div>
-                <div class="project-item" id="easy-bank">
-                    <h1 class="project-title">Easy Bank - 2021</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <div class="project-item">
+                    <h1 class="project-item-header">Restaraunts</h1>
+                    <div class="project-item-container" id="restaraunts">
+                    </div>
+                </div>
+                <div class="project-item">
+                    <h1 class="project-item-header">E<span class="pink">-</span>Commerce</h1>
+                    <div class="project-item-container" id="eCommerce">
+                    </div>
                 </div>
             </div>
         </section>
