--- a/HTML/index.html
+++ b/HTML/index.html
@@ -37,13 +37,13 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="#about" class="nav-link">
                         <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="address-card" class="svg-inline--fa fa-address-card" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M512 32H64C28.65 32 0 60.65 0 96v320c0 35.35 28.65 64 64 64h448c35.35 0 64-28.65 64-64V96C576 60.65 547.3 32 512 32zM176 128c35.35 0 64 28.65 64 64s-28.65 64-64 64s-64-28.65-64-64S140.7 128 176 128zM272 384h-192C71.16 384 64 376.8 64 368C64 323.8 99.82 288 144 288h64c44.18 0 80 35.82 80 80C288 376.8 280.8 384 272 384zM496 320h-128C359.2 320 352 312.8 352 304S359.2 288 368 288h128C504.8 288 512 295.2 512 304S504.8 320 496 320zM496 256h-128C359.2 256 352 248.8 352 240S359.2 224 368 224h128C504.8 224 512 231.2 512 240S504.8 256 496 256zM496 192h-128C359.2 192 352 184.8 352 176S359.2 160 368 160h128C504.8 160 512 167.2 512 176S504.8 192 496 192z" class="fa-primary"></path></svg>
                         <span class="link-text">About Me</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="#contact" class="nav-link">
                         <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="address-book" class="svg-inline--fa fa-address-book" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M384 0H96C60.65 0 32 28.65 32 64v384c0 35.35 28.65 64 64 64h288c35.35 0 64-28.65 64-64V64C448 28.65 419.3 0 384 0zM240 128c35.35 0 64 28.65 64 64s-28.65 64-64 64c-35.34 0-64-28.65-64-64S204.7 128 240 128zM336 384h-192C135.2 384 128 376.8 128 368C128 323.8 163.8 288 208 288h64c44.18 0 80 35.82 80 80C352 376.8 344.8 384 336 384zM496 64H480v96h16C504.8 160 512 152.8 512 144v-64C512 71.16 504.8 64 496 64zM496 192H480v96h16C504.8 288 512 280.8 512 272v-64C512 199.2 504.8 192 496 192zM496 320H480v96h16c8.836 0 16-7.164 16-16v-64C512 327.2 504.8 320 496 320z" class="fa-primary"></path></svg>
                         <span class="link-text">Contact</span>
                     </a>
@@ -194,29 +194,67 @@
             </div>
         </section>
     <!-- End of Services Section -->
-        <section id="projects">
-            <div class="projects container">
-                <h1 class="section-title">Pro<span class="pink">j</span>ects</h1>
-                <div class="project-item">
-                    <h1 class="project-item-header" >Banking</h1>
-                    <div class="project-item-container" id="banking">
-                    </div>
-                </div>
-                <div class="project-item">
-                    <h1 class="project-item-header">Restaraunts</h1>
-                    <div class="project-item-container" id="restaraunts">
-                    </div>
-                </div>
-                <div class="project-item">
-                    <h1 class="project-item-header">E<span class="pink">-</span>Commerce</h1>
-                    <div class="project-item-container" id="eCommerce">
-                    </div>
+        
+    <!-- Beginning of Projects Section -->
+    <section id="projects">
+        <div class="projects container">
+            <h1 class="section-title">Pro<span class="pink">j</span>ects</h1>
+            <div class="project-item">
+                <h1 class="project-item-header" >Banking</h1>
+                <div class="project-item-container" id="banking">
                 </div>
             </div>
-        </section>
-    <!-- Beginning of Projects Section -->
-
+            <div class="project-item">
+                <h1 class="project-item-header">Restaraunts</h1>
+                <div class="project-item-container" id="restaraunts">
+                </div>
+            </div>
+            <div class="project-item">
+                <h1 class="project-item-header">E<span class="pink">*</span>Commerce</h1>
+                <div class="project-item-container" id="eCommerce">
+                </div>
+            </div>
+            <div class="project-item">
+                <h1 class="project-item-header">Gaming</h1>
+                <div class="project-item-container" id="gaming">
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- End of Projects Section -->
+
+    <!-- Start of About Me Section -->
+    <section id="about">
+        <div class="about container">
+            <h1 class="section-title">About <span class="pink">Me</span></h1>
+            <div class="col-left">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum aut eius, quae, maiores aliquid, dolor corporis quasi numquam sunt cupiditate odit dignissimos adipisci. Magnam possimus ex delectus qui sapiente ipsa.</p>
+            </div>
+            <div class="col-right">
+                <div class="about-img"><img src="/Images/profile-img.jpg" alt="Image of Tyler"></div>
+            </div>
+        </div>
+    </section>
+    <!-- End of About Me Section -->
+
+    <!-- Start of Contact Section -->
+    <section id="contact">
+        <div class="contact container">
+            <h1 class="section-title">Contact <span class="pink">Me</span></h1>
+            <h1 class="contact-text">Hi Tyler! I need you to </h1>
+            <input type="text" name="inquiry" placeholder="design my business a website!" required>
+            <br>
+            <h1 class="contact-text">My name is </h1>
+            <input type="text" name="name" placeholder="Your name here" required>
+            <br>
+            <h1 class="contact-text">My phone number is </h1>
+            <input type="text" name="number" placeholder="(XXX) XXX-XXXX" required>
+            <br>
+            <h1 class="contact-text">Oh, and my email is </h1>
+            <input type="text" name="email" placeholder="youremail@website.com" required>
+        </div>
+    </section>
+    <!-- End of Contact Section -->
         
     <!-- END OF MAIN -->
     </main>
