--- a/HTML/index.html
+++ b/HTML/index.html
@@ -48,6 +48,12 @@
                         <span class="link-text">Contact</span>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a href="#footer" class="nav-link">
+                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="users" class="svg-inline--fa fa-users" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path fill="currentColor" d="M319.9 320c57.41 0 103.1-46.56 103.1-104c0-57.44-46.54-104-103.1-104c-57.41 0-103.1 46.56-103.1 104C215.9 273.4 262.5 320 319.9 320zM369.9 352H270.1C191.6 352 128 411.7 128 485.3C128 500.1 140.7 512 156.4 512h327.2C499.3 512 512 500.1 512 485.3C512 411.7 448.4 352 369.9 352zM512 160c44.18 0 80-35.82 80-80S556.2 0 512 0c-44.18 0-80 35.82-80 80S467.8 160 512 160zM183.9 216c0-5.449 .9824-10.63 1.609-15.91C174.6 194.1 162.6 192 149.9 192H88.08C39.44 192 0 233.8 0 285.3C0 295.6 7.887 304 17.62 304h199.5C196.7 280.2 183.9 249.7 183.9 216zM128 160c44.18 0 80-35.82 80-80S172.2 0 128 0C83.82 0 48 35.82 48 80S83.82 160 128 160zM551.9 192h-61.84c-12.8 0-24.88 3.037-35.86 8.24C454.8 205.5 455.8 210.6 455.8 216c0 33.71-12.78 64.21-33.16 88h199.7C632.1 304 640 295.6 640 285.3C640 233.8 600.6 192 551.9 192z" class="fa-primary"></path></svg>
+                        <span class="link-text">Social Media</span>
+                    </a>
+                </li>
             </ul>
         </nav>
     </section>
@@ -63,7 +69,7 @@
                     <h1 class="Hello" data-text="Hello,">Hello,</h1>
                     <h1 class="Im" data-text="I'm ">I'm <span class="titleName" data-text="Tyler">Tyler</span></h1>
                     <div class="button">
-                        <a href="#" type="button" class="cta">Hire Me</a>
+                        <a href="#contact" type="button" class="cta">Hire Me</a>
                     </div>
                 </div>
             </div>
@@ -240,21 +246,57 @@
     <!-- Start of Contact Section -->
     <section id="contact">
         <div class="contact container">
-            <h1 class="section-title">Contact <span class="pink">Me</span></h1>
-            <h1 class="contact-text">Hi Tyler! I need you to </h1>
-            <input type="text" name="inquiry" placeholder="design my business a website!" required>
-            <br>
-            <h1 class="contact-text">My name is </h1>
-            <input type="text" name="name" placeholder="Your name here" required>
-            <br>
-            <h1 class="contact-text">My phone number is </h1>
-            <input type="text" name="number" placeholder="(XXX) XXX-XXXX" required>
-            <br>
-            <h1 class="contact-text">Oh, and my email is </h1>
-            <input type="text" name="email" placeholder="youremail@website.com" required>
+            <div class="contact-header">
+                <h1 class="section-title">Contact <span class="pink">Me</span></h1>
+            </div>
+            <div class="contact-item">
+                <h1 class="contact-text">My name is</h1>
+                <input type="text" name="name" placeholder="Your name here" required>
+            </div>
+            <div class="contact-item">
+                <h1 class="contact-text">I would like to ask about </h1>
+                <input type="text" name="inquiry" placeholder="designing my business a website!" required>
+            </div>
+            <div class="contact-item">
+                <h1 class="contact-text">My phone number is</h1>
+                <input type="text" name="number" placeholder="(XXX) XXX-XXXX" required>
+            </div>
+            <div class="contact-item">
+                <h1 class="contact-text">Oh, and my email is</h1>
+                <input type="text" name="email" placeholder="your-email@website.com" required>
+            </div>
+            <div class="button">
+                <a href="#submit" type="button" class="cta">Submit</a>
+            </div>
         </div>
     </section>
     <!-- End of Contact Section -->
+
+    <!-- Footer -->
+    <section id="footer">
+        <div class="footer container">
+            <div class="brand">
+                <h1><span class="pink">T</span>yler <span class="pink">I</span>s <span class="pink">C</span>oding</h1>
+                <h2>Your Complete Web Solution</h2>
+                <div class="social-icon">
+                    <div class="social-item">
+                        <a href="#"><img src="/Images/icon-facebook.png" alt="Facebook"></a>
+                    </div>
+                    <div class="social-item">
+                        <a href="#"><img src="/Images/icon-instagram.png" alt="Instagram"></a>
+                    </div>
+                    <div class="social-item">
+                        <a href="#"><img src="/Images/icon-github.png" alt="GitHub"></a>
+                    </div>
+                    <div class="social-item">
+                        <a href="#"><img src="/Images/icon-linkedin.png" alt="LinkedIn"></a>
+                    </div>
+                </div>
+            </div>
+            <p>Copyright © 2021 Tyler McKenna. All rights reserved.</p>
+        </div>
+    </section>
+    <!-- End of Footer -->
         
     <!-- END OF MAIN -->
     </main>
