--- a/HTML/index.html
+++ b/HTML/index.html
@@ -78,122 +78,128 @@
 
     <!-- Beginning of Services Section -->
         <section id="services">
+            <div class="services-header">
+                <h1 class="section-title">Ser<span class="pinkh1">v</span>ices</h1>
+            </div>
             <div class="services container">
-                <div class="services-header">
-                    <h1 class="section-title">Ser<span class="pinkh1">v</span>ices</h1>
-                </div>
-                <div class="service-item-header">
-                    <h1>Web Design</h1>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta, molestias eligendi placeat minima, quidem, voluptatem quam dicta atque ad doloremque harum quo sequi deleniti dolore ex itaque officiis ut a.</p>
-                </div>
-                <div class="service-item-bg">
-                    <div class="service-item-container">
-                        <div class="service-item">
-                            <div class="program-icon">
-                                <img src="../Images/icon-html.png" alt="HTML 5">
+                <div class="service-container">
+                    <div class="service-item-header">
+                        <h1>Web Design</h1>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta, molestias eligendi placeat minima, quidem, voluptatem quam dicta atque ad doloremque harum quo sequi deleniti dolore ex itaque officiis ut a.</p>
+                    </div>
+                    <div class="service-item-bg">
+                        <div class="service-item-container">
+                            <div class="service-item">
+                                <div class="program-icon">
+                                    <img src="../Images/icon-html.png" alt="HTML 5">
+                                </div>
+                                <div class="program-name">HTML 5</div>
                             </div>
-                            <div class="program-name">HTML 5</div>
-                        </div>
-                        <div class="service-item">
-                            <div class="program-name">CSS 3</div>
-                            <div class="program-icon">
-                                <img src="../Images/icon-css.png" alt="CSS 3">
+                            <div class="service-item">
+                                <div class="program-name">CSS 3</div>
+                                <div class="program-icon">
+                                    <img src="../Images/icon-css.png" alt="CSS 3">
+                                </div>
                             </div>
-                        </div>
-                        <div class="service-item">
-                            <div class="program-icon">
-                                <img src="../Images/icon-figma.png" alt="Figma">
+                            <div class="service-item">
+                                <div class="program-icon">
+                                    <img src="../Images/icon-figma.png" alt="Figma">
+                                </div>
+                                <div class="program-name">Figma</div>
                             </div>
-                            <div class="program-name">Figma</div>
-                        </div>
-                        <div class="service-item">
-                            <div class="program-name">Sass</div>
-                            <div class="program-icon">
-                                <img src="../Images/icon-sass.png" alt="Sass">
+                            <div class="service-item">
+                                <div class="program-name">Sass</div>
+                                <div class="program-icon">
+                                    <img src="../Images/icon-sass.png" alt="Sass">
+                                </div>
                             </div>
-                        </div>
-                        <div class="service-item">
-                            <div class="program-icon">
-                                <img src="../Images/icon-xd.png" alt="Adobe XD">
+                            <div class="service-item">
+                                <div class="program-icon">
+                                    <img src="../Images/icon-xd.png" alt="Adobe XD">
+                                </div>
+                                <div class="program-name">Adobe XD</div>
                             </div>
-                            <div class="program-name">Adobe XD</div>
                         </div>
                     </div>
                 </div>
-                <div class="service-item-header">
-                    <h1 id="digitalArt">Digital Art</h1>
-                    <h1 id="illustration"><span class="pink">&</span> Illustration</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente debitis odit illum! Ratione libero illum inventore atque esse animi expedita quod, ipsa id, fuga ex natus. Dolor nostrum aliquam officiis!</p>
-                </div>
-                <div class="service-item-bg">
-                    <div class="service-item-container">
-                        <div class="service-item">
-                            <div class="program-icon">
-                                <img src="../Images/icon-photoshop.png" alt="Photoshop">
+                <div class="service-container">
+                    <div class="service-item-header">
+                        <h1 id="digitalArt">Digital Art</h1>
+                        <h1 id="illustration"><span class="pink">&</span> Illustration</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente debitis odit illum! Ratione libero illum inventore atque esse animi expedita quod, ipsa id, fuga ex natus. Dolor nostrum aliquam officiis!</p>
+                    </div>
+                    <div class="service-item-bg">
+                        <div class="service-item-container">
+                            <div class="service-item">
+                                <div class="program-icon">
+                                    <img src="../Images/icon-photoshop.png" alt="Photoshop">
+                                </div>
+                                <div class="program-name">Photoshop</div>
                             </div>
-                            <div class="program-name">Photoshop</div>
-                        </div>
-                        <div class="service-item">
-                            <div class="program-name">Illustrator</div>
-                            <div class="program-icon">
-                                <img src="../Images/icon-illustrator.png" alt="Illustrator">
+                            <div class="service-item">
+                                <div class="program-name">Illustrator</div>
+                                <div class="program-icon">
+                                    <img src="../Images/icon-illustrator.png" alt="Illustrator">
+                                </div>
                             </div>
-                        </div>
-                        <div class="service-item">
-                            <div class="program-icon">
-                                <img src="../Images/icon-animate.png" alt="Animate">
+                            <div class="service-item">
+                                <div class="program-icon">
+                                    <img src="../Images/icon-animate.png" alt="Animate">
+                                </div>
+                                <div class="program-name">Animate</div>
                             </div>
-                            <div class="program-name">Animate</div>
-                        </div>
-                        <div class="service-item">
-                            <div class="program-name">Maya</div>
-                            <div class="program-icon">
-                                <img src="../Images/icon-maya.png" alt="Maya">
+                            <div class="service-item">
+                                <div class="program-name">Maya</div>
+                                <div class="program-icon">
+                                    <img src="../Images/icon-maya.png" alt="Maya">
+                                </div>
                             </div>
-                        </div>
-                        <div class="service-item">
-                            <div class="program-icon">
-                                <img src="../Images/icon-3dsmax.png" alt="3ds Max">
+                            <div class="service-item">
+                                <div class="program-icon">
+                                    <img src="../Images/icon-3dsmax.png" alt="3ds Max">
+                                </div>
+                                <div class="program-name">3ds Max</div>
                             </div>
-                            <div class="program-name">3ds Max</div>
                         </div>
                     </div>
                 </div>
-                <div class="service-item-header">
-                    <h1>Programming</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, tempora in itaque sunt obcaecati, necessitatibus laborum nemo corporis aspernatur fugit harum at! Accusamus fugiat totam recusandae deleniti voluptas illo eaque.</p>
-                </div>
-                <div class="service-item-bg">
-                    <div class="service-item-container">
-                        <div class="service-item">
-                            <div class="program-icon">
-                                <img src="../Images/icon-js.png" alt="JavaScript">
+                <div class="service-container">
+                    <div class="service-item-header">
+                        <h1>Programming</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, tempora in itaque sunt obcaecati, necessitatibus laborum nemo corporis aspernatur fugit harum at! Accusamus fugiat totam recusandae deleniti voluptas illo eaque.</p>
+                    </div>
+                    <div class="service-item-bg">
+                        <div class="service-item-container">
+                            <div class="service-item">
+                                <div class="program-icon">
+                                    <img src="../Images/icon-js.png" alt="JavaScript">
+                                </div>
+                                <div class="program-name">JavaScript</div>
                             </div>
-                            <div class="program-name">JavaScript</div>
-                        </div>
-                        <div class="service-item">
-                            <div class="program-name">Python</div>
-                            <div class="program-icon">
-                                <img src="../Images/icon-python.png" alt="Python">
+                            <div class="service-item">
+                                <div class="program-name">Python</div>
+                                <div class="program-icon">
+                                    <img src="../Images/icon-python.png" alt="Python">
+                                </div>
                             </div>
-                        </div>
-                        <div class="service-item">
-                            <div class="program-icon">
-                                <img src="../Images/icon-react.png" alt="React">
+                            <div class="service-item">
+                                <div class="program-icon">
+                                    <img src="../Images/icon-react.png" alt="React">
+                                </div>
+                                <div class="program-name">React</div>
                             </div>
-                            <div class="program-name">React</div>
-                        </div>
-                        <div class="service-item">
-                            <div class="program-name">Vue</div>
-                            <div class="program-icon">
-                                <img src="../Images/icon-vue.png" alt="Vue">
+                            <div class="service-item">
+                                <div class="program-name">Vue</div>
+                                <div class="program-icon">
+                                    <img src="../Images/icon-vue.png" alt="Vue">
+                                </div>
                             </div>
-                        </div>
-                        <div class="service-item">
-                            <div class="program-icon">
-                                <img src="../Images/icon-angular.png" alt="Angular">
+                            <div class="service-item">
+                                <div class="program-icon">
+                                    <img src="../Images/icon-angular.png" alt="Angular">
+                                </div>
+                                <div class="program-name">Angular</div>
                             </div>
-                            <div class="program-name">Angular</div>
                         </div>
                     </div>
                 </div>
@@ -203,8 +209,8 @@
         
     <!-- Beginning of Projects Section -->
     <section id="projects">
+        <h1 class="section-title">Pro<span class="pink">j</span>ects</h1>
         <div class="projects container">
-            <h1 class="section-title">Pro<span class="pink">j</span>ects</h1>
             <div class="project-item">
                 <h1 class="project-item-header" >Banking</h1>
                 <div class="project-item-container" id="banking">
