--- a/HTML/index.html
+++ b/HTML/index.html
@@ -210,6 +210,7 @@
     <!-- Beginning of Projects Section -->
     <section id="projects">
         <h1 class="section-title">Pro<span class="pink">j</span>ects</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam saepe fuga suscipit quas odio consectetur esse sit explicabo dolor ipsa, veniam sunt quos laborum, alias deleniti, voluptate quia voluptates in.</p>
         <div class="projects container">
             <div class="project-item">
                 <h1 class="project-item-header" >Banking</h1>
@@ -237,10 +238,13 @@
 
     <!-- Start of About Me Section -->
     <section id="about">
+        <h1 class="section-title">About <span class="pink">Me</span></h1>
         <div class="about container">
-            <h1 class="section-title">About <span class="pink">Me</span></h1>
             <div class="col-left">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum aut eius, quae, maiores aliquid, dolor corporis quasi numquam sunt cupiditate odit dignissimos adipisci. Magnam possimus ex delectus qui sapiente ipsa.</p>
+                <div class="button">
+                    <a href="#resume" type="button" class="cta">Download Resume</a>
+                </div>
             </div>
             <div class="col-right">
                 <div class="about-img"><img src="/Images/profile-img.jpg" alt="Image of Tyler"></div>
