Changed file system

--- a/index.html
+++ b/index.html
@@ -252,11 +252,27 @@
                     </h1>
                 </div>
                 <div class="services container">
-                    <div class="services-left"></div>
+                    <div class="services-left">
+                        <ul class="icons">
+                            <li>
+                                <img src="/images/icon-consulting.png" alt="Consulting">
+                            </li>                       
+                            <li>
+                                <img src="/images/icon-planning.png" alt="Planning">
+                            </li>
+                            <li>
+                                <img src="/images/icon-build.png" alt="Building">
+                            </li>
+                            <li>
+                                <img src="/images/icon-launch.png" alt="Launch">
+                            </li>
+                        </ul>
+                    </div>
                     <div class="services-right">
                         <header>
                             <h2>My Services</h2>
                         </header>
+                        <hr>
                         <p>
                             I dedicate myself to meet and exceed my clients
                             initial vision of their passion project. Knowing
@@ -314,15 +330,34 @@
                         <h1 class="project-item-header">
                             Silverpoint Sneakers
                         </h1>
-                        <img src="/Images/pic01.png" alt="">
+                        <img src="/images/pic01.png" alt="">
+                        <p>A fully responsive website for a local sneaker and clothing retailer named Silverpoint Sneakers.</p>
+                        <div class="button">
+                            <a href="#" type="button" class="cta">Visit</a>
+                        </div>
                     </div>
                     <div class="project-item">
                         <h1 class="project-item-header">Paterro's Kitchen</h1>
-                        <img src="/Images/pic02.png" alt="">
+                        <img src="/images/pic02.png" alt="">
+                        <p>
+                            A website created for a local restaurant to showcase
+                            the talent and skill of the head chef and owner.
+                        </p>
+                        <div class="button">
+                            <a href="#" type="button" class="cta">Visit</a>
+                        </div>
                     </div>
                     <div class="project-item">
                         <h1 class="project-item-header">Ayesha's Salon</h1>
-                        <img src="/Images/pic03.png" alt="">
+                        <img src="/images/pic03.png" alt="">
+                        <p>
+                            A website created for a local hair salon. It
+                            showcases the owners skills with a lookbook and
+                            descriptions of services provided.
+                        </p>
+                        <div class="button">
+                            <a href="#" type="button" class="cta">Visit</a>
+                        </div>
                 </div>
             </section>
             <!-- End of Projects Section -->
@@ -334,12 +369,33 @@
                 </h1>
                 <div class="about container">
                     <div class="col-left">
+                        <header>
+                            <h2>I'm here to help</h2>
+                        </header>
+                        <hr>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Laborum aut eius, quae, maiores aliquid, dolor
-                            corporis quasi numquam sunt cupiditate odit
-                            dignissimos adipisci. Magnam possimus ex delectus
-                            qui sapiente ipsa.
+                            I am a software engineer based in Boston,
+                            Massachusetts and I am passionate about helping
+                            clients and businesses increase their web presence
+                            by building responsive and beautiful websites.
+                        </p>
+                        <p>
+                            I went to The New England Institute of Art and
+                            received my degree in Digital Art and Animation.
+                            During my schooling I learned many software suites
+                            including the Adobe Creative Suite, 3Ds Max, Maya,
+                            and more. A chunk of my courses were in web design,
+                            web development, and programming to make rudimentary
+                            websites. This was the first spark of a life-long
+                            passion for web development.
+                        </p>
+                        <p>
+                            When I am not writing code you can typically find me
+                            making playlists, reading books, gaming, playing
+                            guitar, creating art, or endlessly scrolling
+                            Instagram. Most recently, I have gotten really into
+                            collecting sneakers. My wallet does not appreciate
+                            it.
                         </p>
                         <div class="button">
                             <a href="#resume" type="button" class="cta"
@@ -350,7 +406,7 @@
                     <div class="col-right">
                         <div class="about-img">
                             <img
-                                src="/Images/profile-img.jpg"
+                                src="/images/profile-img.jpg"
                                 alt="Image of Tyler"
                             />
                         </div>
